Steuerdateien auf fl/web_start umgestellt, Testverzeichnis freigeschaltet
git-svn-id: http://svn.assembla.com/svn/federleicht/trunk@82 3f4560be-fcb6-4516-b323-ae570ede3bb7

--- a/.htaccess
+++ b/.htaccess
@@ -15,9 +15,9 @@ RewriteRule ^(app|cache|config|fl|log|script)(.*)$ / [L]
 # Daten auf oeffentliches Verzeichnis umleiten
 #   Wenn kein öffentliches test-Verzeichnis mehr benötigt wird, sollte 
 #   test in die Liste der Federleichtverzeichnisse aufgenommen werden.
-RewriteRule ^(ajax|css|img|js|php|pdf|swf|test)/(.*)$ /public/$1/$2 [L]
+RewriteRule ^(ajax|css|img|js|php|pdf|swf)/(.*)$ /public/$1/$2 [L]
 
 # installierte Module von Federleicht verarbeiten lassen.
 #RewriteRule ^(account|basecontent|search|start|pages|register|user|)(.*)$ - [C] 
-RewriteRule !^(public|phpmyadmin|ajax|css|img|js|php|swf|test)/(.*)$ - [C]
+RewriteRule !^(public|phpmyadmin|test)/(.*)$ - [C]
 RewriteRule ^(.*)$ index.php [L]
